[gd_scene load_steps=12 format=3 uid="uid://shmnlmyaykqt"]

[ext_resource type="Script" uid="uid://cuoscwt1tif7o" path="res://scripts/main_menu.gd" id="1_tbmy8"]
[ext_resource type="Texture2D" uid="uid://bg4jnafceiaw3" path="res://gfx/main_menu/bgheartsv.png" id="2_jk1qb"]
[ext_resource type="Texture2D" uid="uid://c8nk13lnjeggo" path="res://gfx/main_menu/logotitleblue.png" id="3_5dd4i"]
[ext_resource type="Texture2D" uid="uid://m3hykciunet4" path="res://gfx/main_menu/settingsbuttonblue.png" id="4_lgwnu"]
[ext_resource type="Texture2D" uid="uid://sly0my5q7723" path="res://gfx/main_menu/creditsbuttonblue.png" id="5_flqon"]
[ext_resource type="Texture2D" uid="uid://7yjn3y1esqkv" path="res://gfx/main_menu/quitbuttonblue.png" id="6_rcqid"]
[ext_resource type="Texture2D" uid="uid://bp14awbl04i2b" path="res://gfx/main_menu/fulscreen.png" id="7_1ajci"]
[ext_resource type="Texture2D" uid="uid://b4ct40tti5ovm" path="res://gfx/main_menu/windowed.png" id="8_7b55j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5pajh"]
atlas = ExtResource("4_lgwnu")
region = Rect2(0, 111, 1700, 566)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ex8"]
atlas = ExtResource("5_flqon")
region = Rect2(0, 60.696495, 1700, 613.0666)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8gd2"]
atlas = ExtResource("6_rcqid")
region = Rect2(0, 88.991875, 1700, 657.86755)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbmy8")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 150.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jk1qb")
expand_mode = 1
stretch_mode = 4

[node name="title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 226.0
offset_right = -676.0
offset_bottom = -420.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5dd4i")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 352.0
offset_right = 866.0
offset_bottom = 1191.0

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(566.667, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="Settings" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(566.667, 190)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_5pajh")
ignore_texture_size = true
stretch_mode = 4

[node name="Credits" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(566.667, 208.433)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_j7ex8")
ignore_texture_size = true
stretch_mode = 4

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(566.477, 229.513)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_a8gd2")
ignore_texture_size = true
stretch_mode = 4

[node name="FullScreen" type="TextureButton" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -250.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
toggle_mode = true
texture_normal = ExtResource("7_1ajci")
texture_pressed = ExtResource("8_7b55j")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="FullScreen" to="." method="_on_full_screen_pressed"]
